--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-
 </head>
 
 <body>
@@ -187,7 +186,7 @@
     </section>
 
     <section class="our-groups" >
-      <div class="our-groups__wrapper rotate-img">
+      <div class="our-groups__wrapper">
         <header class="our-groups__header-wrapper">
           <h2 class="our-groups__header">Наши группы</h2>
           <p class="our-groups__subtitle">В группах занимается до 5 человек. Все ученики в группе примерно одного
